objects/agf__OMOpportunity__c.object
<CustomObject>
    <description>Opportunity Open Market opportunities</description>
    <fields>
        <fullName>agf__Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Desired_Skills__c</fullName>
        <label>Desired Skills</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Distributed_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the team have distributed team members (remote employees)?</description>
        <label>Distributed Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dev</fullName>
                    <default>true</default>
                    <label>Dev</label>
                </value>
                <value>
                    <fullName>QE</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Doc</fullName>
                </value>
                <value>
                    <fullName>PerfEng</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
                <value>
                    <fullName>TPM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Highlighted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This opportunity will show up on the OOM welcome page.</description>
        <label>V2MOM Top Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Intranet_Posting__c</fullName>
        <inlineHelpText>If there is an associated talentforce posting include a link to the job opening on the intranet.</inlineHelpText>
        <label>Intranet Posting</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Level__c</fullName>
        <defaultValue>&quot;All levels&quot;</defaultValue>
        <inlineHelpText>For example, &quot;Any Level&quot;, &quot;MTS and above&quot;, &quot;Director&quot;, etc.</inlineHelpText>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release the opportunity is for.</description>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Open Market Opportunities</relationshipLabel>
        <relationshipName>Open_Market_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Required_Skills__c</fullName>
        <label>Required Skills</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Interviewing</fullName>
                </value>
                <value>
                    <fullName>Closed-Filled</fullName>
                </value>
                <value>
                    <fullName>Closed-Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Open Market Opportunity</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Function__c</columns>
        <columns>agf__Level__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All_Closed_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Function__c</columns>
        <columns>agf__Level__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Status__c</field>
            <operation>equals</operation>
            <value>Closed-Filled,Closed-Canceled</value>
        </filters>
        <label>All Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>agf__All_Open_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Function__c</columns>
        <columns>agf__Level__c</columns>
        <columns>agf__Hiring_Manager__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Status__c</field>
            <operation>equals</operation>
            <value>Open,Interviewing</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <nameField>
        <label>Opportunity Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Market Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>